# BotBrain

./: .gitignore  README.md  botbrain.service  docker-compose.yaml  install.sh
botbrain_ws/: robot_config.yaml
botbrain_ws/src/bot_custom_interfaces/: CMakeLists.txt
botbrain_ws/src/bot_custom_interfaces/msg/: MotorTemperature.msg
botbrain_ws/src/bot_navigation/launch/: nav2.launch.py
botbrain_ws/src/bot_state_machine/include/: lifecycle_manager.hpp
botbrain_ws/src/bot_state_machine/src/: lifecycle_manager.cpp
botbrain_ws/src/g1_pkg/: g1_setup.bash
botbrain_ws/src/g1_pkg/config/: camera_config.yaml
botbrain_ws/src/go2_pkg/config/: nav2_params.yaml
botbrain_ws/src/go2w_pkg/: .gitignore  CMakeLists.txt  README.md  README_pt.md  go2w_setup.bash  package.xml
botbrain_ws/src/go2w_pkg/config/: camera_config.yaml  dock_params.yaml  nav2_params copy.yaml  nav2_params.yaml  pointcloud_to_laserscan_params.yaml
botbrain_ws/src/go2w_pkg/launch/: pc2ls.launch.py  robot_interface.launch.py
botbrain_ws/src/go2w_pkg/maps/: .maps_upload_tracking.yaml
botbrain_ws/src/go2w_pkg/meshes/: go2w_interface.stl
botbrain_ws/src/go2w_pkg/scripts/: go2w_controller_commands.py  go2w_read.py  go2w_video_stream.py  go2w_write.py
botbrain_ws/src/go2w_pkg/urdf/: robot.urdf
botbrain_ws/src/tita_pkg/config/: camera_config.yaml
docs/: SUPABASE_SETUP.md  g1-wifi-setup.md  installation-guide.md
frontend/src/app/audit/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/labs/: page.tsx
frontend/src/app/log/: page.tsx
frontend/src/components/: avatar-upload.tsx  extras-bar.tsx  login.tsx  map-view-native.tsx  map-view-nav2.tsx  map-view.tsx  mission-map-view.tsx  mission-map-warning-banner.tsx  moondream-detections.tsx  robot-connection-popup.tsx  sidebar.tsx  simple-map-view.tsx  soundboard-sound-clips.tsx  yolo-filter-bar.tsx  yolo-settings-dialog.tsx
frontend/src/contexts/: LanguageContext.tsx
utils/: g1_wifi.bash
(+29 files in other folders)
